fixtures/errors/yield_outside_generator.js
function foo() {
  yield 1;
}
