fixtures/errors/yield_outside_generator.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: Expression expected
 --> errors/yield_outside_generator.js:2:3
2 |   yield 1;
  |   ^^^^^

